# trading_terminal

./: .gitignore  CLAUDE.md  MarketDataFeedV3.proto  MarketDataFeedV3_pb2.py  README.md  app.cfg  documentation.txt  extract_row_temp.py  full_data_to_csv.py  full_data_to_sqlite.py  gui_visualizer.py  imgui.ini  inspect_db.py  livedata.py  map_instruments.py  merge_dbs.py  nse_mis_instruments.json  requirements.txt  run_backtest.py  run_stock_data.py  stock_data_to_sqlite.py  test_bsm.py  test_bsm2.py  test_bsm_data.py  test_bsm_range.py  test_bsm_sim.py  test_delta.py  test_fut.py  test_real_delta.py  theme.cfg  tokgen.py  update_token.py  visualizer.py
.claude/: settings.local.json
backtest/: engine.py  results.py  strategy.py
layouts/: initial.ini
strategies/: example.py  performance_analysis.ipynb
visualiser/: CMakeLists.txt  README.md  install_and_build.ps1  setup_deps.ps1
visualiser/src/: db.cpp  db.h  main.cpp  ui.cpp  ui.h
